[package]
name = "demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remember to revert this before releasing your game!
#bevy = { "0.9.1" }
bevy = { version = "0.9.1", features = ["dynamic"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

